Wed Jul 17 15:21:10 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (unlink_heap_slot): fix memory leak.
	  free slot itself at free_heap_slot().

	  Reproduce-able code is here:
	    N1 = 100_000; N2 = 1_000_000
	    N1.times{ary = []; N2.times{ary << ''}}
	  Maybe this problem is remaining in Ruby 2.0.0.

	* gc.c (unlink_heap_slot): remove not working code.

Wed Jul 17 14:31:13 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: re-design the heap structure.

	  (1) The heap is consists of a set of slots.
	  (2) Each "slot" has a "slot_body".
	      slot::start and slot::limit specify RVALUE beginning address
	      and number of RVALUE in a "slot_body".
	  (3) "slot_body" contains a pointer to slot (slot_body::header::slot)
	      and an array of RVALUE.
	  (4) heap::sorted is an array of "slots", sorted by an address of
	      slot::body.

	  See https://bugs.ruby-lang.org/projects/ruby-trunk/wiki/GC_design
	  for more details (figure).

	* gc.c: Avoid "heaps" terminology. It is ambiguous.

Wed Jul 17 13:29:16 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix heaps_header and heaps_slot to reduce memory consumption.
	  (1) move heaps_header::start and limit to  heaps_slot.
	  (2) remove heaps_header::end which can be calculated by start+limit.

	* gc.c: catch up above change.

Wed Jul 17 12:30:05 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/st.h (st_strcasecmp): Macro defined for compatibility.
	  (st_strncasecmp): Ditto.

Wed Jul 17 11:57:45 2013  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/util.rb (CGI::Util#escape, unescape): Avoid use of regexp
	  special global variable. [Feature #8648] Thanks to fotos.

Wed Jul 17 11:57:10 2013  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/erb.rb (ERB::Util#url_encode): Avoid use of regexp special global
	  variable. [Feature #8648] Thanks to fotos.

Wed Jul 17 08:12:41 2013  Tanaka Akira  <akr@fsij.org>

	* st.c (st_locale_insensitive_strcasecmp): Renamed from st_strcasecmp.